# RustyClaw

./: .env.example  .gitignore  API_DOCUMENTATION.md  CLAUDE.md  Cargo.toml  LICENSE  OPENCLAW_PLUGIN_SYSTEM.md  PLUGIN_EXAMPLES.md  PLUGIN_QUICK_REFERENCE.md  PLUGIN_RESEARCH_INDEX.md  PLUGIN_RESEARCH_SUMMARY.md  PLUGIN_SYSTEM_DIAGRAMS.md  README.md  READY_FOR_DEPLOYMENT.txt  TOOL_API_IMPLEMENTATION_CHECKLIST.md  TOOL_CREATION_API.md  WHATSAPP_LLM_CODE_FLOW.md  WHATSAPP_LLM_FLOW.md  WHATSAPP_RUST_CHANGES.md  WHATSAPP_RUST_GAPS.md  docker-compose.yml  ollama.txt  openclaw_agentic_analysis.md  test_sqlite.rs
.github/workflows/: ci.yml  release.yml
config/: default.yaml  development.yaml  minimal.yaml  ollama-vm.yaml  production.yaml
docs/: DEPLOYMENT.md  PROXMOX_CONTAINER_SETUP.md  PROXMOX_SETUP.md  SESSION_INTEGRATION_SUMMARY.md  WHATSAPP_INTEGRATION.md  deployment-guide.md  implementation-plan-llm.md  llm-cache-design.md  progress-llm-integration.md  proxmox-deployment.md
migrations/sqlite/: 001_initial.sql  002_add_model_tracking.sql  003_identity_system.sql  004_add_password_hash.sql
scripts/: pre-commit.sh  setup-proxmox-container.sh  setup-proxmox-env.sh  setup-proxmox-runner.sh
src/: lib.rs  main.rs
src/api/: auth.rs  config.rs  error.rs  mod.rs  response.rs  routes.rs  websocket.rs  workspace.rs
src/channels/: discord.rs  mod.rs  telegram.rs  whatsapp.rs
src/cli/: token.rs  user.rs
src/config/: loader.rs  mod.rs  schema.rs  workspace.rs
src/core/: approval.rs  bootstrap.rs  events.rs  memory.rs  mod.rs  pairing.rs  password.rs  prompt.rs  router.rs  session.rs  utils.rs
src/llm/: cache.rs  client.rs  mod.rs  routing.rs
src/mcp/: mod.rs  server.rs  sse.rs  types.rs
src/plugins/: api.rs  hooks.rs  mod.rs  registry.rs  trait_.rs  traits.rs
src/plugins/examples/: email.rs  mod.rs
src/sandbox/: container.rs  docker.rs  mod.rs  pruning.rs  security.rs  workspace.rs
src/storage/: mod.rs  sqlite.rs
src/tools/: creator.rs  exec.rs  execution_result.rs  executor.rs  memory.rs  mod.rs  policy.rs  skill_watcher.rs  skills.rs  web.rs  whatsapp.rs
templates/: AGENTS.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
tests/: config_api_integration_test.rs  llm_integration.rs  session_integration.rs  session_simple.rs  tool_integration.rs
