[package]
name = "rustyclaw"
version = "0.1.0"
edition = "2021"
authors = ["RustyClaw Contributors"]
description = "A local-first, privacy-focused AI assistant gateway written in Rust"
license = "MIT"
repository = "https://github.com/your-org/rustyclaw"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "migrate", "chrono"] }

# Channel adapters
teloxide = { version = "0.12", features = ["macros"] }
serenity = { version = "0.12", features = ["client", "gateway", "model", "cache"] }
whatsapp-rust = { git = "https://github.com/0ldev/whatsapp-rust.git", branch = "main", default-features = false, features = ["sqlite-storage"] }
whatsapp-rust-tokio-transport = { git = "https://github.com/0ldev/whatsapp-rust.git", branch = "main" }
whatsapp-rust-ureq-http-client = { git = "https://github.com/0ldev/whatsapp-rust.git", branch = "main" }
wacore = { git = "https://github.com/0ldev/whatsapp-rust.git", branch = "main" }
wacore-binary = { git = "https://github.com/0ldev/whatsapp-rust.git", branch = "main" }
waproto = { git = "https://github.com/0ldev/whatsapp-rust.git", branch = "main" }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# LLM client (OpenAI-compatible)
async-openai = "0.20"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
futures = "0.3"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
config = "0.14"
directories = "5.0"
dirs = "5.0"
async-trait = "0.1"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Regex for model routing
regex = "1.10"

# Global state management
once_cell = "1.19"

# Docker client
bollard = "0.16"

# Email support
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "hostname", "tokio1-rustls", "ring", "webpki-roots"] }

# File system watcher with debouncing
notify = "6"
notify-debouncer-mini = "0.4"

# Stream utilities for async
tokio-stream = "0.1"

# Random number generation
rand = "0.8"

# QR Code generation for terminal
qr2term = "0.3"

[dev-dependencies]
tempfile = "3.0"
mockito = "1.0"
serde_urlencoded = "0.7"
